Parser/logs/perl-RPM2.txt
<86>May 16 00:06:02 userdel[1311180]: delete user 'rooter'
<86>May 16 00:06:02 groupadd[1311194]: group added to /etc/group: name=rooter, GID=1268
<86>May 16 00:06:02 groupadd[1311194]: group added to /etc/gshadow: name=rooter
<86>May 16 00:06:02 groupadd[1311194]: new group: name=rooter, GID=1268
<86>May 16 00:06:02 useradd[1311205]: new user: name=rooter, UID=1268, GID=1268, home=/root, shell=/bin/bash, from=none
<86>May 16 00:06:02 userdel[1311229]: delete user 'builder'
<86>May 16 00:06:02 userdel[1311229]: removed group 'builder' owned by 'builder'
<86>May 16 00:06:02 userdel[1311229]: removed shadow group 'builder' owned by 'builder'
<86>May 16 00:06:02 groupadd[1311239]: group added to /etc/group: name=builder, GID=1269
<86>May 16 00:06:02 groupadd[1311239]: group added to /etc/gshadow: name=builder
<86>May 16 00:06:02 groupadd[1311239]: new group: name=builder, GID=1269
<86>May 16 00:06:02 useradd[1311251]: new user: name=builder, UID=1269, GID=1269, home=/usr/src, shell=/bin/bash, from=none
/usr/src/in/srpm/perl-RPM2-1.4-alt1.1.src.rpm: license not found in '/usr/share/license' directory: GPL+
/usr/src/in/srpm/perl-RPM2-1.4-alt1.1.src.rpm: The use of such a license name is ambiguous: Artistic
<13>May 16 00:06:14 rpmi: perl-Locale-Maketext-Simple-0.21-alt3 1321333616 installed
<13>May 16 00:06:14 rpmi: perl-Params-Check-0.38-alt1 1374748239 installed
<13>May 16 00:06:14 rpmi: perl-Perl-OSType-1.010-alt1 1467551766 installed
<13>May 16 00:06:14 rpmi: perl-Module-Load-0.36-alt1 sisyphus+258992.100.1.1 1601543407 installed
<13>May 16 00:06:14 rpmi: perl-Term-Cap-1.18-alt1 sisyphus+315126.100.1.1 1676227129 installed
<13>May 16 00:06:14 rpmi: perl-Term-ANSIColor-5.01-alt1 sisyphus+244783.100.1.2 1579747505 installed
<13>May 16 00:06:14 rpmi: perl-Pod-Escapes-1.07-alt1 1418767892 installed
<13>May 16 00:06:14 rpmi: perl-Math-Complex-1.59-alt1 1334229876 installed
<13>May 16 00:06:14 rpmi: perl-Math-BigInt-2.005003-alt1 sisyphus+381904.100.1.1 1744908928 installed
<13>May 16 00:06:14 rpmi: perl-Math-BigInt-FastCalc-0.5020-alt1 sisyphus+380407.100.1.2 1743778372 installed
<13>May 16 00:06:14 rpmi: perl-Filter-1.64-alt1 sisyphus+335067.400.1.1 1700901412 installed
<13>May 16 00:06:14 rpmi: perl-Encode-3.21-alt1 sisyphus+343095.100.1.1 1710875477 installed
<13>May 16 00:06:14 rpmi: perl-Pod-Simple-3.45-alt1 sisyphus+321554.100.1.1 1684663135 installed
<13>May 16 00:06:14 rpmi: perl-Pod-Usage-2.05-alt1 sisyphus+380280.100.1.2 1743749666 installed
<13>May 16 00:06:14 rpmi: perl-podlators-6.0.2-alt1 sisyphus+380278.100.1.2 1743747710 installed
<13>May 16 00:06:14 rpmi: perl-Module-Metadata-1.000038-alt1 sisyphus+319540.100.1.1 1682734027 installed
<13>May 16 00:06:14 rpmi: perl-Module-CoreList-5.20250421-alt1 sisyphus+382498.100.1.1 1745489176 installed
<13>May 16 00:06:14 rpmi: perl-Module-Load-Conditional-0.74-alt1 sisyphus+257151.100.1.2 1598998133 installed
<13>May 16 00:06:14 rpmi: perl-Pod-Html-1:5.38.2-alt0.2 sisyphus+344512.40.2.1 1712358015 installed
<13>May 16 00:06:14 rpmi: perl-JSON-PP-1:4.16-alt1 sisyphus+313250.100.1.1 1673493761 installed
<13>May 16 00:06:14 rpmi: perl-CPAN-Meta-YAML-0.020-alt1 sisyphus+380163.100.1.1 1743710032 installed
<13>May 16 00:06:14 rpmi: perl-Parse-CPAN-Meta-2.150010-alt3 sisyphus+236868.100.1.1 1567107580 installed
<13>May 16 00:06:14 rpmi: perl-CPAN-Meta-2.150010-alt3 sisyphus+236868.100.1.1 1567107580 installed
<13>May 16 00:06:14 rpmi: libpopt-devel-1:1.18-alt1 sisyphus+283609.300.5.1 1630003299 installed
<13>May 16 00:06:14 rpmi: libgdbm-1.8.3-alt10 sisyphus+346222.200.3.2 1716468404 installed
<13>May 16 00:06:14 rpmi: libgdbm-devel-1.8.3-alt10 sisyphus+346222.200.3.2 1716468404 installed
<13>May 16 00:06:15 rpmi: perl-devel-1:5.38.2-alt0.2 sisyphus+344512.40.2.1 1712358015 installed
<13>May 16 00:06:15 rpmi: perl-IPC-Cmd-1.04-alt1 sisyphus+234736.100.1.1 1563377607 installed
<13>May 16 00:06:15 rpmi: perl-ExtUtils-CBuilder-0.280236-alt1 sisyphus+266439.100.1.1 1613496606 installed
<13>May 16 00:06:15 rpmi: perl-inc-latest-0.500-alt2 1447197123 installed
<13>May 16 00:06:15 rpmi: perl-Module-Build-0.4234-alt1 sisyphus+319536.100.1.3 1682735642 installed
<13>May 16 00:06:15 rpmi: librpm-devel-4.13.0.1-alt40 sisyphus+327286.4100.14.1 1711485411 installed
Building target platforms: x86_64
Building for target x86_64
Wrote: /usr/src/in/nosrpm/perl-RPM2-1.4-alt1.1.nosrc.rpm (w1.gzdio)
Installing perl-RPM2-1.4-alt1.1.src.rpm
Building target platforms: x86_64
Building for target x86_64
Executing(%prep): /bin/sh -e /usr/src/tmp/rpm-tmp.12735
+ umask 022
+ /bin/mkdir -p /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ rm -rf RPM2-1.4
+ echo 'Source #0 (RPM2-1.4.tar):'
Source #0 (RPM2-1.4.tar):
+ /bin/tar -xf /usr/src/RPM/SOURCES/RPM2-1.4.tar
+ cd RPM2-1.4
+ /bin/chmod -c -Rf u+rwX,go-w .
+ exit 0
Executing(%build): /bin/sh -e /usr/src/tmp/rpm-tmp.12735
+ umask 022
+ /bin/mkdir -p /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ cd RPM2-1.4
+ perl_vendor_build
+ export PERL_EXTUTILS_AUTOINSTALL=--skip
+ PERL_EXTUTILS_AUTOINSTALL=--skip
+ export XSUBPP_STATIC_XS=1
+ XSUBPP_STATIC_XS=1
+ _perl_vendor_fixin
+ find . -type f -print0
+ xargs -r0 /usr/bin/subst -p '1s,^#![[:space:]]*\([^[:space:]]*/\)\?perl\([^/[:alpha:][:space:]][^/[:space:]]*\)\?\([[:space:]]\|$\),#!/usr/bin/perl\3,'
+ /usr/bin/grep -qs -Ew '((dist|module)_name|Build_PL|Module::Build)' Build.PL
+ _perl_vendor_MB_build
+ : writing Build script
+ /usr/bin/perl Build.PL installdirs=vendor
Created MYMETA.yml and MYMETA.json
Creating new 'Build' script for 'RPM2' version '1.4'
+ /usr/bin/perl -e '$req=require"./_build/prereqs";' -e 'while (my ($k, $v) = each %{$$req{requires}})	{ print "perl($k)>=$v\n" }' -e 'while (my ($k, $v) = each %{$$req{recommends}})	{ print "perl($k)>=$v\n" }'
+ tee .perl.req
perl(File::Basename)>=0
perl(File::Spec)>=0
+ : running Build script
+ /usr/bin/perl Build
Building RPM2
gcc -I/usr/lib64/perl5/CORE -DVERSION="1.4" -DXS_VERSION="1.4" -fPIC -DRPM2_API=4013 -c -D_REENTRANT -D_GNU_SOURCE -fwrapv -fno-strict-aliasing -pipe -fstack-protector-strong -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -o lib/RPM2.o lib/RPM2.c
lib/RPM2.c: In function 'XS_RPM2_rpmvercmp':
lib/RPM2.c:397:18: error: implicit declaration of function 'rpmvercmp'; did you mean 'timercmp'? [-Wimplicit-function-declaration]
  397 |         RETVAL = rpmvercmp(one, two);
      |                  ^~~~~~~~~
      |                  timercmp
lib/RPM2.c: In function 'XS_RPM2__C__PackageIterator__iterator_next':
lib/RPM2.c:674:17: warning: variable 'RETVAL' set but not used [-Wunused-but-set-variable]
  674 |         Header  RETVAL;
      |                 ^~~~~~
error building lib/RPM2.o from 'lib/RPM2.c' at /usr/share/perl5/ExtUtils/CBuilder/Base.pm line 186.
error: Bad exit status from /usr/src/tmp/rpm-tmp.12735 (%build)


RPM build errors:
    Bad exit status from /usr/src/tmp/rpm-tmp.12735 (%build)
Command exited with non-zero status 1
2.28user 0.41system 0:02.67elapsed 100%CPU (0avgtext+0avgdata 79820maxresident)k
0inputs+0outputs (0major+45565minor)pagefaults 0swaps
hsh-rebuild: rebuild of `perl-RPM2-1.4-alt1.1.src.rpm' failed.
Command exited with non-zero status 1
12.56user 4.46system 0:25.29elapsed 67%CPU (0avgtext+0avgdata 142476maxresident)k
5744inputs+0outputs (0major+195067minor)pagefaults 0swaps
